--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "recommend_movie"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+mlflow = "1.22.0"
+protobuf = "3.20"
+numpy = "1.23.4"
 
 
 [build-system]
