--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,15 @@ packages = [{include = "recommend_movie"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-mlflow = "1.22.0"
-protobuf = "3.20"
-numpy = "1.23.4"
+numba = "0.56"
+mlflow = "^2.1.1"
+pydantic = "^1.10.7"
 
+
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+flake8 = "^6.0.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
