--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 loguru = "^0.7.0"
+isort = "^5.12.0"
+pydantic = "^1.10.7"
+pandas = "^2.0.0"
+pandera = "^0.14.5"
 
 
 [tool.poetry.group.dev.dependencies]
