--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic = "^1.10.7"
 pandas = "^2.0.0"
 pandera = "^0.14.5"
 mlxtend = "^0.22.0"
+faiss-cpu = "^1.7.4"
 
 
 [tool.poetry.group.dev.dependencies]
